--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </header>
   <div class="ed-container full backgroud">
     <div class="main-distribute" id="container">
-
+    
     </div>
   </div>
 
@@ -27,12 +27,17 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Charter</h5>
+            <h5 class="modal-title" id="modal-title"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body" id="body">
+            <h3></h3>
+            <h3></h3>
+            <h3></h3>
+            <h3></h3>
+            <h3></h3>
           </div>
         </div>
       </div>
